--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:h2:mem:testdb1
-spring.datasource.driverClassName=org.h2.Driver
+hibernate.hbm2ddl.auto=create-drop
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.jdbcUrl=jdbc:h2:mem:auto
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
 
-spring.second-datasource.url=jdbc:h2:mem:testdb2
-spring.second-datasource.driverClassName=org.h2.Driver
+spring.second-datasource.jdbcUrl=jdbc:h2:mem:moto
 spring.second-datasource.username=sa
 spring.second-datasource.password=
-spring.jpa.hibernate.ddl-auto=update
