fourth commit, soap services was added, only kafka for log and one exception left

--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=
 spring.second-datasource.jdbcUrl=jdbc:h2:mem:moto
 spring.second-datasource.username=sa
 spring.second-datasource.password=
+
+cxf.path=/Service
