--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.second-datasource.username=sa
 spring.second-datasource.password=
 
 cxf.path=/Service
+spring.kafka.bootstrap-servers=localhost:9092
