--- a/restApi/pom.xml
+++ b/restApi/pom.xml
@@ -69,7 +69,11 @@
 			<artifactId>json</artifactId>
 			<version>20240205</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>4.0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
