--- a/restApi/pom.xml
+++ b/restApi/pom.xml
@@ -69,12 +69,12 @@
 			<artifactId>json</artifactId>
 			<version>20240205</version>
 		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
-			<version>4.0.4</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.SSS</groupId>
+            <artifactId>restApi</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
