third commit, changed kafka realisation

--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.second-datasource.username=sa
 spring.second-datasource.password=
 cxf.path=/Service
 spring.kafka.bootstrap-servers=localhost:9092
+kafka.soap.topic.name=soapTopic
