--- a/restApi/pom.xml
+++ b/restApi/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.2</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.SSS</groupId>
-	<artifactId>restApi</artifactId>
+	<groupId>com.sss</groupId>
+	<artifactId>restapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>restApi</name>
-	<description>Demo project for SSS</description>
+	<name>restapi</name>
+	<description>Demo project for sss</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -70,8 +70,8 @@
 			<version>20240205</version>
 		</dependency>
         <dependency>
-            <groupId>com.SSS</groupId>
-            <artifactId>restApi</artifactId>
+            <groupId>com.sss</groupId>
+            <artifactId>restapi</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
