--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# **********************************************************************************************************************
+# Database property
+# **********************************************************************************************************************
 hibernate.hbm2ddl.auto=create-drop
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
@@ -9,6 +12,21 @@ spring.datasource.password=
 spring.second-datasource.jdbcUrl=jdbc:h2:mem:moto
 spring.second-datasource.username=sa
 spring.second-datasource.password=
+
+# **********************************************************************************************************************
+# ApacheCXF property
+# **********************************************************************************************************************
 cxf.path=/Service
+
+# **********************************************************************************************************************
+# Kafka property
+# **********************************************************************************************************************
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.soap.topic.name=soapTopic
+
+# **********************************************************************************************************************
+# Swagger property
+# **********************************************************************************************************************
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui-custom.html
