--- a/restApi/pom.xml
+++ b/restApi/pom.xml
@@ -62,7 +62,8 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-			<version>4.0.3</version>
+			<!--4.0.3-->
+			<version>4.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -74,7 +75,18 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-ftp</artifactId>
+			<version>6.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.10.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
