--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.datasource.password=
 spring.second-datasource.jdbcUrl=jdbc:h2:mem:moto
 spring.second-datasource.username=sa
 spring.second-datasource.password=
+
+
+# **********************************************************************************************************************
+# Server property
+# **********************************************************************************************************************
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-store=keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
