18 commit, moved to https, and added a new shareFolder controller

--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -22,3 +22,6 @@ server.ssl.enabled=true
 server.ssl.key-store=keystore.jks
 server.ssl.key-store-password=password
 server.ssl.key-alias=tomcat
+
+
+folderUpload.cron.expression=0 0 * * * MON-FRI
