--- a/restApi/src/main/resources/application.yaml
+++ b/restApi/src/main/resources/application.yaml
@@ -32,3 +32,7 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui-custom.html
+
+folderUpload:
+  file:
+    pattern:Уралсиб_посещения(.*).xlsx
